--- a/ModelGraph/ModelGraph.Control/ModelGraph.Control.csproj
+++ b/ModelGraph/ModelGraph.Control/ModelGraph.Control.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\ModelGraph.Custom\ModelGraph.Custom.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Windows.Foundation.UniversalApiContract">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\References\10.0.18362.0\Windows.Foundation.UniversalApiContract\8.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
