--- a/ModelGraph/ModelGraph.Core/ModelGraph.Core.csproj
+++ b/ModelGraph/ModelGraph.Core/ModelGraph.Core.csproj
@@ -9,4 +9,10 @@
      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
      <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
    </ItemGroup>
+
+   <ItemGroup>
+     <Reference Include="Windows.Foundation.UniversalApiContract">
+       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\References\10.0.18362.0\Windows.Foundation.UniversalApiContract\8.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+     </Reference>
+   </ItemGroup>
 </Project>
