--- a/ModelGraph/ModelGraph/.editorconfig
+++ b/ModelGraph/ModelGraph/.editorconfig
@@ -9,3 +9,6 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+# CA1305: Specify IFormatProvider
+dotnet_diagnostic.CA1305.severity = suggestion
